# hit606robot

./: README
LIO-SAM/: CMakeLists.txt
LIO-SAM/config/: params.yaml
LIO-SAM/launch/: test.launch
LIO-SAM/src/: imageProjection.cpp  imuPreintegration.cpp
amcl0/: CMakeLists.txt  package.xml
amcl0/src/: amcl_node.cpp
code_utils/: CMakeLists.txt
control_node/: CMakeLists.txt  control_node(yuanshi).cpp  demo_gmapping.rviz  package.xml  start.rviz
control_node/include/velodyne_datatest/: velodyne_datatest.h  velodyne_obstacle.h
control_node/launch/: cankao.launch  control_node.launch  control_node0.launch  control_node2.launch  control_nodelio.launch  start.launch  start2.launch  starthdl.launch  startlio.launch  startsn.launch
control_node/msg/: velodyne_obstacle.msg
control_node/src/: cankao.cpp  control_node.cpp  control_node0.cpp  control_node2.cpp  control_nodelio.cpp  control_nodesn.cpp  control_nodesn2.cpp
decision_node/: CMakeLists.txt  package.xml
decision_node/data/: 1123gps_lat&lon  1204_gps  1205_gps  1206_gps  20191206_gps  20191208gps_data  20191208gps_data_1  20191208gps_data_2  20191208gps_data_3  20200526gps_data  805gps_lat&lon  gps_lat&lon
decision_node/include/decision_node/: decision_node.h
decision_node/launch/: decision_node.launch
decision_node/scripts/: 0526gps_data  change.py  path_decision1.py  path_decision2.py  path_decision3.py  tracking_demo.py
decision_node/src/: cpp_decision.cpp  decision.cpp  decision_node.cpp  node.cpp
gps_lio/gps_common2/: CMakeLists.txt  package.xml  setup.py
gps_lio/gps_common2/nodes/: fix_translator
gps_lio/gps_common2/scripts/: bag_converter
gps_lio/gps_common2/src/: utm_odometry_node2.cpp  utm_odometry_to_navsatfix_node.cpp
gps_lio/gps_umd2/: CMakeLists.txt  package.xml
gps_lio/gpsd_client2/: CMakeLists.txt  package.xml
gps_umd/gps_common/: CMakeLists.txt
gps_umd/gps_common/src/: utm_odometry_node.cpp  utm_odometry_nodegps.cpp  utm_odometry_to_navsatfix_node.cpp
hit_nav/: CMakeLists.txt  package.xml
hit_nav/launch/: fake_move_base.launch  fake_move_base_blank_map.launch
hit_nav/maps/: blank_map.yaml  map.pgm  map.yaml
hit_nav/src/: move_base_square_hit.cpp
imu_tk/: CMakeLists.txt
imu_utils/: CMakeLists.txt
imu_utils/data/: data_imu_acc_x.txt  data_imu_acc_y.txt  data_imu_acc_z.txt  data_imu_sim_acc_x.txt  data_imu_sim_acc_y.txt  data_imu_sim_acc_z.txt  data_imu_sim_gyr_t.txt  imu_imu_param.yaml
imu_utils/launch/: imu.launch
indoor_navigation/: CMakeLists.txt  chushi.txt  guiji0.txt  map.json  package.xml
indoor_navigation/config/config_default/: base_local_planner_params.yaml  base_local_planner_params2.yaml  costmap_common_params.yaml  costmap_common_params2.yaml  global_costmap_params2.yaml  local_costmap_params.yaml
indoor_navigation/config/tanker/: base_local_planner_params.yaml  costmap_common_params.yaml
indoor_navigation/config/test_only/: base_local_planner_params.yaml  costmap_common_params.yaml
indoor_navigation/launch/: amcl.launch  guanji.launch  savemap.launch
indoor_navigation/maps/: blank_map.yaml  chushi.txt  work0.pgm  work0.yaml  work1.pgm  work2.pgm  work_map.yaml  无标题文档
indoor_navigation/msg/: ctrmode.msg  panctrmode.msg  path.msg
indoor_navigation/scripts/: guanji.py  imupub.py  lis.py  savemap.py  start.py  start2.py  startguiji.py  startmap.py  test.py  vision.py  visionvel.py  程序清单
indoor_navigation/scripts/未命名文件夹/: c.py  guiji.json  startpath.py  txt.py
indoor_navigation/src/: imu_publisher_from_imudata.cpp  odom_publisher_from_matcher.cpp  test_cmdvel_trans.cpp
laser_scan_matcher/: CMakeLists.txt
laser_scan_matcher/demo/: demo_gmapping.rviz  velodyne.launch
laser_scan_matcher/include/laser_scan_matcher/: laser_scan_matcher.h
laser_scan_matcher/src/: laser_scan_matcher.cpp
mrobot_teleop/launch/: mrobot_teleop2.launch
mrobot_teleop/scripts/: client.py  mrobot_teleop.py  mrobot_teleop2.py
my_serial_node/: CMakeLists.txt  a.cpp
my_serial_node/launch/: GPS_IMU_node.launch
my_serial_node/src/: my_serial_node.cpp  my_serial_node2.cpp  open_node.cpp
navigation-kinetic-devel/amcl/: CMakeLists.txt  package.xml
navigation-kinetic-devel/amcl/src/: amcl_node.cpp
navigation-kinetic-devel/map_server/: CMakeLists.txt  package.xml
navigation-kinetic-devel/map_server/src/: image_loader.cpp  main.cpp  map_saver.cpp
navigation-kinetic-devel/move_base/src/: move_base.cpp
navigation-kinetic-devel/robot_pose_ekf/: CMakeLists.txt
navigation-kinetic-devel/robot_pose_ekf/src/: odom_estimation.cpp  odom_estimation_node.cpp
octomap_mapping-kinetic-devel/octomap_server/src/: OctomapServer.cpp  octomap_saver.cpp  octomap_server_node.cpp
slam_gmapping/gmapping/: CMakeLists.txt  package.xml  slam_gmapping.cpp  slam_gmapping.h
slam_gmapping/gmapping/msg/: soc.msg
slam_gmapping0/gmapping0/: CMakeLists.txt  package.xml
slam_gmapping0/slam_gmapping0/: CMakeLists.txt  package.xml
velodyne_datatest/: CMakeLists.txt  package.xml
velodyne_datatest/launch/: velodyne16.launch
velodyne_datatest/src/: node.cpp  velodyne_datatest.cpp
ytnode/: CMakeLists.txt  package.xml
ytnode/launch/: ytnode.launch
ytnode/src/: ytnode.cpp
(+21 files in other folders)
