<?xml version="1.0"?>
<package>
  <name>gps_umd2</name>
  <version>0.3.2</version>
  <description>gps_umd2 metapackage</description>

  <maintainer email="ken@tossell.net">Ken Tossell</maintainer>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gps_umd</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gpsd_client2</run_depend>
  <run_depend>gps_common2</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
